# libmkclean

./: CMakeLists.txt
corec/corec/: portab.h
corec/corec/helpers/: CMakeLists.txt
corec/corec/helpers/file/: file_libc.c  file_win32.c
corec/corec/helpers/zlib/: CMakeLists.txt  inflate.h  inftrees.h
corec/corec/node/: nodetree.c
libebml2/: ebmlcrc.c  ebmldate.c  ebmlelement.c  ebmlmaster.c  ebmlstring.c
libmatroska2/minilzo/: lzodefs.h  minilzo.c
mkclean/: CMakeLists.txt  mkclean.c  mkclean_project.h
